Add high DPI logos

--- a/www/index.html
+++ b/www/index.html
@@ -47,7 +47,12 @@
     <main>
       <section>
         <div class="title">
-          <img class="title__logo" src="./logo-60.png">
+          <img class="title__logo"
+            src="./logo-60.png"
+            srcset="./logo-60.png 1x,
+                    ./logo-120.png 2x,
+                    ./logo-180.png 3x"
+          >
           <h1>Rowerynka</h1>
         </div>
 
