Use Nextbike Live API

--- a/www/informacje.html
+++ b/www/informacje.html
@@ -88,8 +88,8 @@
           <li>
           
             Informacje o dostępności rowerów pochodzą z <a
-              href="https://api.um.warszawa.pl/#" target="_blank">Otwartych
-              Danych</a> udostępnianych przez Urząd m.st. Warszawy.
+              href="https://nextbike.net/maps/nextbike-live.xml?city=210"
+              target="_blank">Nextbike Live API</a>.
           
           </li>
 
