Support multiple cities

--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="https://rowerynka.pl" />
     <meta property="og:image" content="https://rowerynka.pl/share.jpg" />
     <meta property="og:image:type" content="image/jpg" />
-    <meta property="og:description" content="Znajdź najbliższy dostępny rower Veturilo." />
+    <meta property="og:description" content="Znajdź najbliższy dostępny rower miejski." />
     <meta property="fb:app_id" content="1795284677456865" />
   </head>
   <body>
@@ -57,7 +57,7 @@
         </div>
 
         <p>
-          Powiedz Rowerynce, gdzie jesteś, i&nbsp;znajdź najbliższy dostępny rower Veturilo.
+          Powiedz Rowerynce, gdzie jesteś, i&nbsp;znajdź najbliższy dostępny rower miejski.
         </p>
 
         <div class="hint">
@@ -71,6 +71,15 @@
             color="blue"
             size="xlarge">
           </div>
+        </div>
+
+        <div class="hint">
+
+          <!-- Katowice, Lublin i Świdnik zawsze pokazują 0 rowerów. -->
+
+          Rowerynka działa obecnie w Warszawie (Veturilo), Łodzi, Wrocławiu,
+          Poznaniu, Szczecinie, Opolu, Grodzisku Mazowieckim i&nbsp;Michałowicach.
+
         </div>
       </section>
 
