--- a/www/informacje.html
+++ b/www/informacje.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="https://rowerynka.pl" />
     <meta property="og:image" content="https://rowerynka.pl/share.jpg" />
     <meta property="og:image:type" content="image/jpg" />
-    <meta property="og:description" content="Znajdź najbliższy dostępny rower Veturilo." />
+    <meta property="og:description" content="Znajdź najbliższy dostępny rower miejski." />
     <meta property="fb:app_id" content="1795284677456865" />
   </head>
   <body>
@@ -36,7 +36,7 @@
         <p>
 
           Rowerynka jest botem w Facebook Messenger. Mówisz jej, gdzie
-          jesteś, a Rowerynka szuka najbliższego dostępnego roweru Veturilo. 
+          jesteś, a Rowerynka szuka najbliższego dostępnego roweru miejskiego.
 
         </p>
 
@@ -118,8 +118,8 @@
 
           Autorem Rowerynki jest <a href="http://twitter.com/stas"
             target="_blank">Staś Małolepszy</a>.  Staś jest wielkim fanem
-          Veturilo — korzysta z niego prawie codziennie.  Kod źródłowy projektu
-          jest dostępny na licencji AGPL 3.0 pod adresem <a
+          warszawskiego Veturilo — korzysta z niego prawie codziennie.  Kod
+          źródłowy projektu jest dostępny na licencji AGPL 3.0 pod adresem <a
             href="https://github.com/stasm/rowerynka">https://github.com/stasm/rowerynka</a>.
 
         </p>
