Use shorter link text for this repo

--- a/www/informacje.html
+++ b/www/informacje.html
@@ -119,8 +119,8 @@
           Autorem Rowerynki jest <a href="http://twitter.com/stas"
             target="_blank">Staś Małolepszy</a>.  Staś jest wielkim fanem
           warszawskiego Veturilo — korzysta z niego prawie codziennie.  Kod
-          źródłowy projektu jest dostępny na licencji AGPL 3.0 pod adresem <a
-            href="https://github.com/stasm/rowerynka">https://github.com/stasm/rowerynka</a>.
+          źródłowy projektu jest dostępny na licencji AGPL 3.0: <a
+            href="https://github.com/stasm/rowerynka">stasm/rowerynka</a>.
 
         </p>
 
