Google Places Autocomplete

--- a/www/informacje.html
+++ b/www/informacje.html
@@ -102,10 +102,17 @@
           </li>
 
           <li>
+
+            Funkcje kartograficzne są <img src="./powered_by_google.png"
+            alt="powered by Google">.
           
             Mapy pochodzą z usługi <a
               href="https://developers.google.com/maps/documentation/static-maps/"
               target="_blank">Google Static Maps API</a>.
+
+            Tłumaczenie nazw miejsc na współrzędne geograficzne jest możliwe
+            dzięki <a href="https://developers.google.com/places/web-service"
+              target="_blank">Google Places API</a>.
           
           </li>
 
