Send a random GIF

--- a/www/informacje.html
+++ b/www/informacje.html
@@ -116,6 +116,13 @@
           
           </li>
 
+          <li>
+
+            Wyszukiwanie gifów jest  <img src="./powered_by_giphy.png"
+            alt="powered by Giphy">.
+
+          </li>
+
         </ul>
 
 
