Use exclamation marks in og:description

--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="https://rowerynka.pl" />
     <meta property="og:image" content="https://rowerynka.pl/share.jpg" />
     <meta property="og:image:type" content="image/jpg" />
-    <meta property="og:description" content="Znajdź najbliższy dostępny rower miejski." />
+    <meta property="og:description" content="Znajdź najbliższy dostępny rower miejski!" />
     <meta property="fb:app_id" content="1795284677456865" />
   </head>
   <body>
@@ -57,7 +57,7 @@
         </div>
 
         <p>
-          Powiedz Rowerynce, gdzie jesteś, i&nbsp;znajdź najbliższy dostępny rower miejski.
+          Powiedz Rowerynce, gdzie jesteś, i&nbsp;znajdź najbliższy dostępny rower miejski!
         </p>
 
         <div class="hint">
