--- a/www/informacje.html
+++ b/www/informacje.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="https://rowerynka.pl" />
     <meta property="og:image" content="https://rowerynka.pl/share.jpg" />
     <meta property="og:image:type" content="image/jpg" />
-    <meta property="og:description" content="Znajdź najbliższy dostępny rower miejski." />
+    <meta property="og:description" content="Znajdź najbliższy dostępny rower miejski!" />
     <meta property="fb:app_id" content="1795284677456865" />
   </head>
   <body>
