--- a/www/index.html
+++ b/www/index.html
@@ -99,6 +99,7 @@
 
     <footer>
       <a class="navlink" href="/informacje">Informacje</a>
+      <a class="navlink" href="/dla-prasy">Dla prasy</a>
       <a class="navlink" href="https://facebook.com/rowerynka">Facebook</a>
     </footer>
 
