--- a/www/informacje.html
+++ b/www/informacje.html
@@ -35,8 +35,13 @@
 
         <p>
 
-          Rowerynka jest botem w Facebook Messenger. Mówisz jej, gdzie
-          jesteś, a Rowerynka szuka najbliższego dostępnego roweru miejskiego.
+          Rowerynka jest bezpłatnym botem na Messengera. To projekt społeczny
+          dla ludzi, którzy chcą przemieszczać się po mieście szybko
+          i ekologicznie. Nie musisz instalować Rowerynki, po prostu napisz do
+          niej na facebooku. Kiedy podasz jej swoją lokalizację, ona znajdzie
+          dla ciebie najbliższy dostępny rower miejski. Rowerynka działa
+          w Warszawie, Łodzi, Wrocławiu, Poznaniu, Szczecinie, Opolu, Grodzisku
+          Mazowieckim i Michałowicach.
 
         </p>
 
