--- a/www/index.html
+++ b/www/index.html
@@ -75,10 +75,11 @@
 
         <div class="hint">
 
-          <!-- Katowice, Lublin i Świdnik zawsze pokazują 0 rowerów. -->
+          <!-- Białystok i Katowice zawsze pokazują 0 rowerów. -->
 
           Rowerynka działa obecnie w Warszawie (Veturilo), Łodzi, Wrocławiu,
-          Poznaniu, Szczecinie, Opolu, Grodzisku Mazowieckim i&nbsp;Michałowicach.
+          Poznaniu, Szczecinie, Lublinie, Opolu, Świdniku, Grodzisku
+          Mazowieckim i&nbsp;Michałowicach.
 
         </div>
       </section>
