--- a/www/informacje.html
+++ b/www/informacje.html
@@ -40,8 +40,8 @@
           i ekologicznie. Nie musisz instalować Rowerynki, po prostu napisz do
           niej na facebooku. Kiedy podasz jej swoją lokalizację, ona znajdzie
           dla ciebie najbliższy dostępny rower miejski. Rowerynka działa
-          w Warszawie, Łodzi, Wrocławiu, Poznaniu, Szczecinie, Opolu, Grodzisku
-          Mazowieckim i Michałowicach.
+          w Warszawie, Łodzi, Wrocławiu, Poznaniu, Szczecinie, Lublinie, Opolu,
+          Świdniku, Grodzisku Mazowieckim i Michałowicach.
 
         </p>
 
