Add Białystok, Radom, Gliwice

--- a/www/index.html
+++ b/www/index.html
@@ -75,11 +75,10 @@
 
         <div class="hint">
 
-          <!-- Białystok i Katowice zawsze pokazują 0 rowerów. -->
-
           Rowerynka działa obecnie w Warszawie (Veturilo), Łodzi, Wrocławiu,
-          Poznaniu, Szczecinie, Lublinie, Opolu, Świdniku, Grodzisku
-          Mazowieckim i&nbsp;Michałowicach.
+          Poznaniu, Szczecinie, Lublinie, Katowicach, Białymstoku, Radomiu,
+          Gliwicach, Opolu, Świdniku, Grodzisku Mazowieckim
+          i&nbsp;Michałowicach.
 
         </div>
       </section>
