--- a/www/informacje.html
+++ b/www/informacje.html
@@ -39,9 +39,12 @@
           dla ludzi, którzy chcą przemieszczać się po mieście szybko
           i ekologicznie. Nie musisz instalować Rowerynki, po prostu napisz do
           niej na facebooku. Kiedy podasz jej swoją lokalizację, ona znajdzie
-          dla ciebie najbliższy dostępny rower miejski. Rowerynka działa
-          w Warszawie, Łodzi, Wrocławiu, Poznaniu, Szczecinie, Lublinie, Opolu,
-          Świdniku, Grodzisku Mazowieckim i Michałowicach.
+          dla ciebie najbliższy dostępny rower miejski.
+
+          Rowerynka działa obecnie w Warszawie (Veturilo), Łodzi, Wrocławiu,
+          Poznaniu, Szczecinie, Lublinie, Katowicach, Białymstoku, Radomiu,
+          Gliwicach, Opolu, Świdniku, Grodzisku Mazowieckim
+          i&nbsp;Michałowicach.
 
         </p>
 
