--- a/www/dla-prasy.html
+++ b/www/dla-prasy.html
@@ -46,8 +46,9 @@
 
           Co najlepsze, Rowerynki nie trzeba instalować! Wystarczy napisać do
           niej na facebooku, żeby szybko znaleźć wolny rower miejski
-          w Warszawie, Łodzi, Wrocławiu, Poznaniu, Szczecinie, Lublinie, Opolu,
-          Świdniku, Grodzisku Mazowieckim i Michałowicach.
+          w Warszawie, Łodzi, Wrocławiu, Poznaniu, Szczecinie, Lublinie,
+          Katowicach, Białymstoku, Radomiu, Gliwicach, Opolu, Świdniku,
+          Grodzisku Mazowieckim i&nbsp;Michałowicach.
 
         </p>
 
