--- a/www/dla-prasy.html
+++ b/www/dla-prasy.html
@@ -64,6 +64,34 @@
 
         </p>
 
+        <h2>
+          Publikacje
+        </h2>
+
+        <p>O Rowerynce napisali m.in.:</p>
+
+        <ul>
+
+          <li>
+
+            naszemiasto.pl, <a href="http://warszawa.naszemiasto.pl/artykul/rowerynka-pomoze-ci-znalezc-miejski-rower-dzieki-wiadomosci,4057291,artgal,t,id,tm.html">Rowerynka pomoże ci znaleźć miejski rower dzięki... wiadomości na Facebooku</a>
+
+          </li>
+
+          <li>
+
+            <a href="https://www.facebook.com/PelnomocnikRowerowyWarszawa/posts/1292158150852980">Pełnomocnik Prezydenta m.st. Warszawy ds. komunikacji rowerowej</a>
+
+          </li>
+
+          <li>
+
+            <a href="https://www.facebook.com/VeturiloWarszawa/posts/1017192148411727">Veturilo — Nextbike Polska</a>
+
+          </li>
+
+        </ul>
+
 
       </section>
     </main>
