Add a paragraph about not retaining any data

--- a/www/informacje.html
+++ b/www/informacje.html
@@ -70,6 +70,17 @@
 
         </p>
 
+        <p>
+
+          Aby znaleźć rowery w Twojej okolicy, potrzebujemy jednorazowej
+          informacji o Twoim bieżącym położeniu.  Nie przechowujemy
+          udostępnionych w ten sposób nam danych na naszych serwerach.  Twoje
+          bieżące położenie poznajemy tylko wtedy, kiedy skorzystasz
+          z przycisku "Wyślij lokalizację".  W żadnym innym wypadku nie mamy
+          dostępu do informacji o tym, gdzie się znajdujesz.
+
+        </p>
+
         <h2>Ciasteczka</h2>
 
         <p>
