Use Bing Static Maps

--- a/www/informacje.html
+++ b/www/informacje.html
@@ -121,14 +121,17 @@
           </li>
 
           <li>
+            Mapy pochodzą z usługi <a
+              href="https://www.microsoft.com/maps/assets/docs/terms.aspx"
+              target="_blank">Microsoft Bing Maps</a>.
 
-            Funkcje kartograficzne są <img src="./powered_by_google.png"
+          </li>
+
+          <li>
+
+            Pozostałe funkcje kartograficzne są <img src="./powered_by_google.png"
             alt="powered by Google">.
           
-            Mapy pochodzą z usługi <a
-              href="https://developers.google.com/maps/documentation/static-maps/"
-              target="_blank">Google Static Maps API</a>.
-
             Tłumaczenie nazw miejsc na współrzędne geograficzne jest możliwe
             dzięki <a href="https://developers.google.com/places/web-service"
               target="_blank">Google Places API</a>.
