--- a/www/dla-prasy.html
+++ b/www/dla-prasy.html
@@ -45,10 +45,12 @@
         <p>
 
           Co najlepsze, Rowerynki nie trzeba instalować! Wystarczy napisać do
-          niej na facebooku, żeby szybko znaleźć wolny rower miejski
-          w Warszawie, Łodzi, Wrocławiu, Poznaniu, Szczecinie, Lublinie,
-          Katowicach, Białymstoku, Radomiu, Gliwicach, Opolu, Świdniku,
-          Grodzisku Mazowieckim i&nbsp;Michałowicach.
+          niej na facebooku, żeby szybko znaleźć wolny rower miejski w ponad
+          20 miastach Polski: Wrocławiu, Poznaniu, Opolu, Warszawie,
+          Białymstoku, Konstancinie Jeziornie, Lublinie, Świdniku, Grodzisku
+          Mazowieckim, Katowicach, Radomiu, Łodzi, Szczecinie, Michałowicach,
+          Legnicy, Gliwicach, Częstochowie, Kołobrzegu, Kaliszu, Szamotułach
+          i&nbsp;Ostrowie Wielkopolskim.
 
         </p>
 
