--- a/www/index.html
+++ b/www/index.html
@@ -75,10 +75,11 @@
 
         <div class="hint">
 
-          Rowerynka działa obecnie w Warszawie (Veturilo), Łodzi, Wrocławiu,
-          Poznaniu, Szczecinie, Lublinie, Katowicach, Białymstoku, Radomiu,
-          Gliwicach, Opolu, Świdniku, Grodzisku Mazowieckim
-          i&nbsp;Michałowicach.
+          Rowerynka działa obecnie we Wrocławiu, Poznaniu, Opolu, Warszawie
+          (Veturilo), Białymstoku, Konstancinie Jeziornie, Lublinie,
+          Świdniku, Grodzisku Mazowieckim, Katowicach, Radomiu, Łodzi,
+          Szczecinie, Michałowicach, Legnicy, Gliwicach, Częstochowie,
+          Kołobrzegu, Kaliszu, Szamotułach i&nbsp;Ostrowie Wielkopolskim.
 
         </div>
       </section>
