--- a/www/informacje.html
+++ b/www/informacje.html
@@ -41,13 +41,17 @@
           niej na facebooku. Kiedy podasz jej swoją lokalizację, ona znajdzie
           dla ciebie najbliższy dostępny rower miejski.
 
-          Rowerynka działa obecnie w Warszawie (Veturilo), Łodzi, Wrocławiu,
-          Poznaniu, Szczecinie, Lublinie, Katowicach, Białymstoku, Radomiu,
-          Gliwicach, Opolu, Świdniku, Grodzisku Mazowieckim
-          i&nbsp;Michałowicach.
-
         </p>
 
+        <p>
+
+          Rowerynka działa obecnie we Wrocławiu, Poznaniu, Opolu, Warszawie
+          (Veturilo), Białymstoku, Konstancinie Jeziornie, Lublinie,
+          Świdniku, Grodzisku Mazowieckim, Katowicach, Radomiu, Łodzi,
+          Szczecinie, Michałowicach, Legnicy, Gliwicach, Częstochowie,
+          Kołobrzegu, Kaliszu, Szamotułach i&nbsp;Ostrowie Wielkopolskim.
+
+        </p>
 
         <h2>Nie śledzimy Cię</h2>
 
