Update cities as of March 2018

--- a/www/dla-prasy.html
+++ b/www/dla-prasy.html
@@ -46,11 +46,9 @@
 
           Co najlepsze, Rowerynki nie trzeba instalować! Wystarczy napisać do
           niej na facebooku, żeby szybko znaleźć wolny rower miejski w ponad
-          20 miastach Polski: Wrocławiu, Poznaniu, Opolu, Warszawie,
-          Białymstoku, Konstancinie Jeziornie, Lublinie, Świdniku, Grodzisku
-          Mazowieckim, Katowicach, Radomiu, Łodzi, Szczecinie, Michałowicach,
-          Legnicy, Gliwicach, Częstochowie, Kołobrzegu, Kaliszu, Szamotułach
-          i&nbsp;Ostrowie Wielkopolskim.
+          20 miastach Polski: w Warszawie (Veturilo), Łodzi, Wrocławiu,
+          Poznaniu, Szczecinie, Lublinie, Katowicach, Białymstoku, Radomiu,
+          Gliwicach, Opolu i wielu innych.
 
         </p>
 
