--- a/www/index.html
+++ b/www/index.html
@@ -75,11 +75,11 @@
 
         <div class="hint">
 
-          Rowerynka działa obecnie we Wrocławiu, Poznaniu, Opolu, Warszawie
-          (Veturilo), Białymstoku, Konstancinie Jeziornie, Lublinie,
-          Świdniku, Grodzisku Mazowieckim, Katowicach, Radomiu, Łodzi,
-          Szczecinie, Michałowicach, Legnicy, Gliwicach, Częstochowie,
-          Kołobrzegu, Kaliszu, Szamotułach i&nbsp;Ostrowie Wielkopolskim.
+          <!-- ~10 największych miast wg https://pl.wikipedia.org/wiki/Miasta_w_Polsce_(statystyki) -->
+
+          Rowerynka działa obecnie w ponad 20 miastach w Polsce, w tym w
+          Warszawie (Veturilo), Łodzi, Wrocławiu, Poznaniu, Szczecinie,
+          Lublinie, Katowicach, Białymstoku, Radomiu, Gliwicach i Opolu.
 
         </div>
       </section>
