--- a/www/informacje.html
+++ b/www/informacje.html
@@ -45,11 +45,11 @@
 
         <p>
 
-          Rowerynka działa obecnie we Wrocławiu, Poznaniu, Opolu, Warszawie
-          (Veturilo), Białymstoku, Konstancinie Jeziornie, Lublinie,
-          Świdniku, Grodzisku Mazowieckim, Katowicach, Radomiu, Łodzi,
-          Szczecinie, Michałowicach, Legnicy, Gliwicach, Częstochowie,
-          Kołobrzegu, Kaliszu, Szamotułach i&nbsp;Ostrowie Wielkopolskim.
+          Rowerynka działa obecnie we Białymstoku, Gliwicach, Grodzisku
+          Mazowieckim, Katowicach, Konstancinie-Jeziornie, Kołobrzegu,
+          Lublinie, Łodzi, Opolu, Ostrowie Wielkopolskim, Piasecznie,
+          Poznaniu, Radomiu, Stalowej Woli, Szamotułach, Szczecinie,
+          Świdniku, Warszawie i&nbsp;Wrocławiu.
 
         </p>
 
