--- a/www/dla-prasy.html
+++ b/www/dla-prasy.html
@@ -48,7 +48,7 @@
           niej na facebooku, żeby szybko znaleźć wolny rower miejski w ponad
           20 miastach Polski: w Warszawie (Veturilo), Łodzi, Wrocławiu,
           Poznaniu, Szczecinie, Lublinie, Katowicach, Białymstoku, Radomiu,
-          Gliwicach, Opolu i wielu innych.
+          Gliwicach, Opolu i&nbsp;w&nbsp;wielu innych.
 
         </p>
 
