--- a/www/index.html
+++ b/www/index.html
@@ -77,9 +77,10 @@
 
           <!-- ~10 największych miast wg https://pl.wikipedia.org/wiki/Miasta_w_Polsce_(statystyki) -->
 
-          Rowerynka działa obecnie w ponad 20 miastach w Polsce, w tym w
-          Warszawie (Veturilo), Łodzi, Wrocławiu, Poznaniu, Szczecinie,
-          Lublinie, Katowicach, Białymstoku, Radomiu, Gliwicach i Opolu.
+          Rowerynka działa obecnie w ponad 20 miastach w&nbsp;Polsce:
+          w&nbsp;Warszawie (Veturilo), Łodzi, Wrocławiu, Poznaniu,
+          Szczecinie, Lublinie, Katowicach, Białymstoku, Radomiu, Gliwicach,
+          Opolu i&nbsp;w&nbsp;wielu innych.
 
         </div>
       </section>
