--- a/www/informacje.html
+++ b/www/informacje.html
@@ -45,7 +45,7 @@
 
         <p>
 
-          Rowerynka działa obecnie we Białymstoku, Gliwicach, Grodzisku
+          Rowerynka działa obecnie w Białymstoku, Gliwicach, Grodzisku
           Mazowieckim, Katowicach, Konstancinie-Jeziornie, Kołobrzegu,
           Lublinie, Łodzi, Opolu, Ostrowie Wielkopolskim, Piasecznie,
           Poznaniu, Radomiu, Stalowej Woli, Szamotułach, Szczecinie,
