Update cities as of June 2018

--- a/www/informacje.html
+++ b/www/informacje.html
@@ -45,11 +45,13 @@
 
         <p>
 
-          Rowerynka działa obecnie w Białymstoku, Gliwicach, Grodzisku
-          Mazowieckim, Katowicach, Konstancinie-Jeziornie, Kołobrzegu,
-          Lublinie, Łodzi, Opolu, Ostrowie Wielkopolskim, Piasecznie,
-          Poznaniu, Radomiu, Stalowej Woli, Szamotułach, Szczecinie,
-          Świdniku, Warszawie i&nbsp;Wrocławiu.
+          Rowerynka działa obecnie w Białymstoku, Częstochowie, Gliwicach,
+          Grodzisku Mazowieckim, Jastrzębiu-Zdroju, Kaliszu, Katowicach,
+          Konstancinie-Jeziornie, Koszalinie, Kołobrzegu, Kędzierzynie-Koźlu,
+          Lublinie, Łodzi, Michałowicach, Opolu, Ostrowie Wielkopolskim,
+          Piasecznie, Pobiedziskach, Poznaniu, Pruszkowie, Pszczynie,
+          Radomiu, Sosnowcu, Stalowej Woli, Szamotułach, Szczecinie,
+          Świdniku, Tychach, Warszawie, Wrocławiu i&nbsp;Zabrzu.
 
         </p>
 
