--- a/www/informacje.html
+++ b/www/informacje.html
@@ -70,7 +70,7 @@
           identyfikator rozmowy, którą prowadzisz z Rowerynką.  Dzięki temu
           możemy zapamiętywać Twoje preferencje.  Rowerynka jest zintegrowana
           z Facebookiem, więc pamiętaj, że wszystkie wiadomości, które jej
-          przesłasz, są przechowywane na serwerach Facebooka i podlegają
+          przesyłasz, są przechowywane na serwerach Facebooka i podlegają
           tamtejszym <a href="https://www.facebook.com/policy.php">Zasadom
             przechowywania danych</a>.
 
