Update cities as of Sep 22

--- a/www/informacje.html
+++ b/www/informacje.html
@@ -45,13 +45,16 @@
 
         <p>
 
-          Rowerynka działa obecnie w Białymstoku, Częstochowie, Gliwicach,
-          Grodzisku Mazowieckim, Jastrzębiu-Zdroju, Kaliszu, Katowicach,
-          Konstancinie-Jeziornie, Koszalinie, Kołobrzegu, Kędzierzynie-Koźlu,
-          Lublinie, Łodzi, Michałowicach, Opolu, Ostrowie Wielkopolskim,
-          Piasecznie, Pobiedziskach, Poznaniu, Pruszkowie, Pszczynie,
-          Radomiu, Sosnowcu, Stalowej Woli, Szamotułach, Szczecinie,
-          Świdniku, Tychach, Warszawie, Wrocławiu i&nbsp;Zabrzu.
+          Rowerynka działa obecnie w następujących miastach:
+
+          Białystok, Ciechanów, Częstochowa, Gliwice, Grodzisk Mazowiecki,
+          Jastrzębie-Zdrój, Kalisz, Katowice, Kędzierzyn-Koźle, Kołobrzeg,
+          Konin, Konstancin Jeziorna, Koszalin, Legnica, Lódź, Lublin,
+          Michałowice, Opole, Ostrów Wielkopolski, Otwock, Piaseczno,
+          Piotrków Trybunalski, Płock, Pobiedziska, Poznań, Pruszków,
+          Pszczyna, Radom, Siemianowice Śląskie, Sosnowiec, Stalowa Wola,
+          Świdnik, Świętochłowice, Szamotuły, Szczecin, Tychowo, Tychy,
+          Warszawa, Wrocław, Zabrze, Zielona Góra.
 
         </p>
 
