Update cities as of May 26, 2019

--- a/www/informacje.html
+++ b/www/informacje.html
@@ -47,14 +47,15 @@
 
           Rowerynka działa obecnie w następujących miastach:
 
-          Białystok, Ciechanów, Częstochowa, Gliwice, Grodzisk Mazowiecki,
-          Jastrzębie-Zdrój, Kalisz, Katowice, Kędzierzyn-Koźle, Kołobrzeg,
-          Konin, Konstancin Jeziorna, Koszalin, Legnica, Lódź, Lublin,
-          Michałowice, Opole, Ostrów Wielkopolski, Otwock, Piaseczno,
-          Piotrków Trybunalski, Płock, Pobiedziska, Poznań, Pruszków,
-          Pszczyna, Radom, Siemianowice Śląskie, Sosnowiec, Stalowa Wola,
-          Świdnik, Świętochłowice, Szamotuły, Szczecin, Tychowo, Tychy,
-          Warszawa, Wrocław, Zabrze, Zielona Góra.
+          Białystok, Chorzów, Częstochowa, Gliwice, Grodzisk Mazowiecki,
+          Kalisz, Katowice, Kędzierzyn-Koźle, Kołobrzeg, Koluszki, Konin,
+          Konstancin Jeziorna, Koszalin, Kutno, Łask, Legnica, Lódź, Łowicz,
+          Lublin, Luboń, Marki, Michałowice, Ostrów Wielkopolski, Pabianice,
+          Piaseczno, Pielgrzymka, Płock, Pobiedziska, Poznań, Pruszków,
+          Pszczyna, Radom, Siemianowice Śląskie, Sieradz, Skierniewice,
+          Sosnowiec, Świdnik, Szamotuły, Szczecin, Tarnów, Tychowo, Tychy,
+          Warszawa, Wrocław, Zabrze, Zduńska Wola, Zgierz, Zielona Góra,
+          Żyrardów.
 
         </p>
 
