--- a/www/informacje.html
+++ b/www/informacje.html
@@ -83,11 +83,9 @@
         <p>
 
           Aby znaleźć rowery w Twojej okolicy, potrzebujemy jednorazowej
-          informacji o Twoim bieżącym położeniu.  Nie przechowujemy
-          udostępnionych w ten sposób nam danych na naszych serwerach.  Twoje
-          bieżące położenie poznajemy tylko wtedy, kiedy skorzystasz
-          z przycisku "Wyślij lokalizację".  W żadnym innym wypadku nie mamy
-          dostępu do informacji o tym, gdzie się znajdujesz.
+          informacji o Twoim położeniu. Nie przechowujemy jej naszych
+          serwerach. Nie mamy też dostępu do dokładnej informacji o tym,
+          gdzie się znajdujesz (np. z GPS twojego telefonu).
 
         </p>
 
