Update cities.json as of March 8, 2020

--- a/www/informacje.html
+++ b/www/informacje.html
@@ -47,15 +47,12 @@
 
           Rowerynka działa obecnie w następujących miastach:
 
-          Białystok, Chorzów, Częstochowa, Gliwice, Grodzisk Mazowiecki,
-          Kalisz, Katowice, Kędzierzyn-Koźle, Kołobrzeg, Koluszki, Konin,
-          Konstancin Jeziorna, Koszalin, Kutno, Łask, Legnica, Lódź, Łowicz,
-          Lublin, Luboń, Marki, Michałowice, Ostrów Wielkopolski, Pabianice,
-          Piaseczno, Pielgrzymka, Płock, Pobiedziska, Poznań, Pruszków,
-          Pszczyna, Radom, Siemianowice Śląskie, Sieradz, Skierniewice,
-          Sosnowiec, Świdnik, Szamotuły, Szczecin, Tarnów, Tychowo, Tychy,
-          Warszawa, Wrocław, Zabrze, Zduńska Wola, Zgierz, Zielona Góra,
-          Żyrardów.
+          Chorzów, Grodzisk Mazowiecki, Kołobrzeg, Koluszki, Komorniki,
+          Konin, Konstancin Jeziorna, Koszalin, Kutno, Łask, Legnica, Łódź,
+          Łowicz, Lublin, Luboń, Marki, Ostrów Wielkopolski, Pabianice,
+          Piaseczno, Pielgrzymka, Poznań, Sieradz, Skierniewice, Sosnowiec,
+          Świdnik, Szamotuły, Szczecin, Tarnów, Tychowo, Warszawa, Wrocław,
+          Zduńska Wola, Zgierz, Zielona Góra.
 
         </p>
 
